# my-manus-leap-teleop

./: .gitignore  README.md  requirements.txt
docs/: manus-sdk-integration.md  publish-checklist.md
launch/: leap_manus_teleop.py  leap_teleop_mode.py  leap_v1_ik.py
scripts/: build_workspace.sh  run_glove_bridge.sh  run_leap_teleop.sh  run_manus_sdk_client.sh
src/glove/: package.xml  setup.py
src/glove/glove/: read_and_send_zmq.py
src/telekinesis/: package.xml  setup.py
src/telekinesis/telekinesis/: dual_hand_manus_teleop.py  leap_ik.py  leap_ik_manus.py  leap_ik_orin.py
